--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Pagar"></activity>
+        <activity android:name=".Comentario"></activity>
+        <activity android:name=".Funciona" />
+        <activity android:name=".Pagar" />
         <activity android:name=".Hpedidos" />
         <activity android:name=".Cervezas.Cerveza1" />
         <activity android:name=".Bebidas.Bebidas1" />
