--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Comentario"></activity>
+        <activity android:name=".Contactanos"></activity>
+        <activity android:name=".Comentario" />
         <activity android:name=".Funciona" />
         <activity android:name=".Pagar" />
         <activity android:name=".Hpedidos" />
